--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,11 +6,16 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>upload file 목록</h1>
-    <ul th:each="file: ${files}">
-        <li ><span th:text="${file.fileName}"></span>
-        <a href="#" th:href="${'/download?uuid='+file.uuid+'&fileName='+file.fileName}">[download]</a>
-        </ul>
+<h1>upload file 목록</h1>
+<!-- <ul th:each="file: ${files}">
+    <li><span th:text="${file.fileName}"></span>
+        <a href="#" th:href="${'/download?uuid='+file.uuid+'&fileName='+file.fileName}">[download]</a>![](../../../../../../AppData/Local/Temp/img1.daumcdn.jpg)
+</ul>
+-->
+
+<span th:text="${path}"></span>
+<img th:src="${path}">
+
 
 </body>
 </html>
