--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,4 +1,4 @@
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,6 +25,7 @@
     <form id = "loginForm2" name="loginForm2">
         <input name = "usrId">
         <input name = "usrPw">
+        <input name = "usrPhone">
         <input name = "usrNickname">
         <input name = "usrName">
         <input name = "usrAdrs">
