--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -7,9 +7,9 @@
 <body>
 
 <h1> File Upload </h1>
-<form method="post" action="/upload" enctype="multipart/form-data">
-    <input type="file" name="uploadfile" multiple="multiple">
-    <input type="text" name="exhibTitle">
+<form method="post" action="/profileImg" enctype="multipart/form-data">
+    <input type="file" name="profileImg" multiple="multiple">
+    <input type="text" name="usrId">
     <input type="submit">
 </form>
 
