--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,33 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script>
-        function test(){
-            document.loginForm.method = "POST";
-            document.loginForm.action = "/loginCheck.do";
-            document.loginForm.submit();
-        }
-        function join(){
-            document.loginForm2.method = "POST";
-            document.loginForm2.action = "/join.do";
-            document.loginForm2.submit();
-        }
-    </script>
 </head>
 <body>
-    <form id = "loginForm" name="loginForm">
+    <form id = "loginForm" name="memberVO" method="post" action="/login">
         <input name = "usrId">
         <input name = "usrPw">
-        <button onclick="test();">test</button>
+        <button type="submit">test</button>
     </form>
-    <form id = "loginForm2" name="loginForm2">
-        <input name = "usrId">
-        <input name = "usrPw">
-        <input name = "usrPhone">
-        <input name = "usrNickname">
-        <input name = "usrName">
-        <input name = "usrAdrs">
-        <button onclick="join();">join</button>
-    </form>
+
 </body>
 </html>
