--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form id = "loginForm2" name="memberVO" action="registration" method="post">
+<form id = "loginForm2" name="test" action="registration" method="post">
   <input name = "usrId">
   <input name = "usrPw">
   <input name = "usrPhone">
