--- a/src/main/resources/templates/imgtest.html
+++ b/src/main/resources/templates/imgtest.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+
     <title>Title</title>
 </head>
 <body>
-    <img src="">
+<h1>upload file 목록</h1>
+<!-- <ul th:each="file: ${files}">
+    <li><span th:text="${file.fileName}"></span>
+        <a href="#" th:href="${'/download?uuid='+file.uuid+'&fileName='+file.fileName}">[download]</a>![](../../../../../../AppData/Local/Temp/img1.daumcdn.jpg)
+</ul>
+-->
+
+<span th:text="${path}"></span>
+<img th:src="${path}">
+
+
 </body>
 </html>
