--- a/src/main/resources/templates/modExhib.html
+++ b/src/main/resources/templates/modExhib.html
@@ -6,15 +6,9 @@
     <script>
         function exhibRegister(){
             document.exhibRegiform.method = "POST";
-            document.exhibRegiform.action = "/exhib/register";
+            document.exhibRegiform.action = "/detailModifiy_test";
             document.exhibRegiform.submit();
         }
-
-        function getFileListView(path, list){
-
-            return a;
-        }
-
     </script>
 </head>
 <body>
@@ -57,17 +51,6 @@
 
     <br>
     전시 사진:
-
-    <script th:inline="javascript">
-        var img = document.createElement('img');
-        var i;
-        for(i=0; i<[[${fileListLength}]]; i++){
-            img.setAttribute("src",[[${imgPath}]]+[[${map.fileList.fileDirName}]]+"/"+[[${map.fileList.fileName}]]);
-            document.getElementById('span').appendChild(img);
-        }
-
-    </script>
-
 
     <input type="file" name="uploadFile" multiple="multiple">
 
